unpackaged/main/default/objects/Account/fields/Account_Alias__c.field-meta.xml
<CustomField>
    <fullName>Account_Alias__c</fullName>
    <description>Ac</description>
    <label>Account Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>