unpackaged/main/default/objects/Account/fields/Account_Currency_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Currency_Text__c</fullName>
    <description>Used to Check duplicate rule on Account Creation.</description>
    <label>Account Currency (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>