unpackaged/main/default/objects/Account/fields/Account_Pricing_Profile__c.field-meta.xml
<CustomField>
    <fullName>Account_Pricing_Profile__c</fullName>
    <label>Account Pricing Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>