unpackaged/main/default/objects/Account/fields/Account_Terms__c.field-meta.xml
<CustomField>
    <fullName>Account_Terms__c</fullName>
    <label>Account Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>