unpackaged/main/default/objects/Account/fields/Account_Total_GP__c.field-meta.xml
<CustomField>
    <fullName>Account_Total_GP__c</fullName>
    <description>Total Gross Profit Account has accrued.</description>
    <label>Account Total GP</label>
    <summarizedField>Opportunity.Gross_Profit_Amt__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>