unpackaged/main/default/objects/Account/fields/AccountFax__c.field-meta.xml
<CustomField>
    <fullName>AccountFax__c</fullName>
    <label>AccountFax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>