unpackaged/main/default/objects/Account/fields/AccountRevenue__c.field-meta.xml
<CustomField>
    <fullName>AccountRevenue__c</fullName>
    <label>AccountRevenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>