unpackaged/main/default/objects/Account/fields/Annual_IT_Spend__c.field-meta.xml
<CustomField>
    <fullName>Annual_IT_Spend__c</fullName>
    <label>Annual IT Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>