unpackaged/main/default/objects/Account/fields/AvaTax_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>AvaTax_Company_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AvaTax Company Code</label>
    <referenceTo>AVA_SFCLOUD__AvaTaxCompany__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>