unpackaged/main/default/objects/Account/fields/BillToEmail__c.field-meta.xml
<CustomField>
    <fullName>BillToEmail__c</fullName>
    <label>Bill To Email</label>
    <type>Email</type>
</CustomField>