unpackaged/main/default/objects/Account/fields/Credit_Limit_Change_Requested__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Change_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used In Approval Process</description>
    <label>Credit Limit Change Requested</label>
    <type>Checkbox</type>
</CustomField>