unpackaged/main/default/objects/Account/fields/Current_Partnership_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Partnership_Level__c</fullName>
    <label>Current Partnership Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>