unpackaged/main/default/objects/Account/fields/CustomTsAndCs__c.field-meta.xml
<CustomField>
    <fullName>CustomTsAndCs__c</fullName>
    <description>Custom Terms and Conditions for this Account</description>
    <label>CustomTsAndCs</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>