unpackaged/main/default/objects/Account/fields/Gross_Profit_2024__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_2024__c</fullName>
    <label>Gross Profit 2024</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>