unpackaged/main/default/objects/Account/fields/Is_On_Credit_Hold__c.field-meta.xml
<CustomField>
    <fullName>Is_On_Credit_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is On Credit Hold</label>
    <type>Checkbox</type>
</CustomField>