unpackaged/main/default/objects/Account/fields/Is_Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Is_Tax_Exempt__c</fullName>
    <formula>NOT(AND (ISBLANK(AVA_MAPPER__Exemption_Number__c),ISBLANK(AVA_SFCLOUD__AvaTax_Exemption_Customer_ID__c)))</formula>
    <label>Is Tax Exempt</label>
    <type>Checkbox</type>
</CustomField>