unpackaged/main/default/objects/Account/fields/Net_Terms_Change_Requested__c.field-meta.xml
<CustomField>
    <fullName>Net_Terms_Change_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used In Approval Process</description>
    <label>Net Terms Change Requested</label>
    <type>Checkbox</type>
</CustomField>