unpackaged/main/default/objects/Account/fields/Parent_Account_Text__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Text__c</fullName>
    <label>Parent Account Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>