unpackaged/main/default/objects/Account/fields/Partner_Tier_Reason__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier_Reason__c</fullName>
    <description>Reason(s) we have tiered this Partner the way we have</description>
    <label>Partner Tier Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineering Expertise</fullName>
            </value>
            <value>
                <fullName>Marketing Capabilities</fullName>
            </value>
            <value>
                <fullName>MDF</fullName>
            </value>
            <value>
                <fullName>Rebates/Incentives</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>