unpackaged/main/default/objects/Account/fields/QBO_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>QBO_Account_ID__c</fullName>
    <label>QBO Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>