unpackaged/main/default/objects/Account/fields/Requested_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Requested_Credit_Limit__c</fullName>
    <description>Used In Approval Process</description>
    <label>Requested Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>