unpackaged/main/default/objects/Account/fields/Requested_Net_Terms__c.field-meta.xml
<CustomField>
    <fullName>Requested_Net_Terms__c</fullName>
    <description>Used In Approval Process</description>
    <label>Requested Net Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Net_Terms</valueSetName>
    </valueSet>
</CustomField>