unpackaged/main/default/objects/Account/fields/Revenue_2024__c.field-meta.xml
<CustomField>
    <fullName>Revenue_2024__c</fullName>
    <label>Revenue 2024</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>