unpackaged/main/default/objects/Account/fields/SourceAccountId__c.field-meta.xml
<CustomField>
    <fullName>SourceAccountId__c</fullName>
    <description>The uniqueID from the import Source</description>
    <externalId>true</externalId>
    <label>SourceAccountId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>