unpackaged/main/default/objects/Account/fields/Supplier_Diversity_Client__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Diversity_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this Account utilize Clutch for our MBE Diversity/Minority Status</description>
    <label>Supplier Diversity Client</label>
    <type>Checkbox</type>
</CustomField>