unpackaged/main/default/objects/Account/fields/Supplier_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Total_Revenue__c</fullName>
    <inlineHelpText>This is a Declarative Lookup Rollup Summary field that Sums the Grand Total of all Purchase Orders related to this Supplier where the Status is not Cancelled.</inlineHelpText>
    <label>Supplier Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>