unpackaged/main/default/objects/Account/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>