unpackaged/main/default/objects/Account/fields/TaxId__c.field-meta.xml
<CustomField>
    <fullName>TaxId__c</fullName>
    <description>Account Tax Id</description>
    <label>TaxId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>