unpackaged/main/default/objects/Account/fields/Terms_Change_Request_Approved__c.field-meta.xml
<CustomField>
    <fullName>Terms_Change_Request_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used In Approval Process</description>
    <label>Terms Change Request Approved</label>
    <type>Checkbox</type>
</CustomField>