unpackaged/main/default/objects/Account/fields/Total_Sales_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Order_Amount__c</fullName>
    <label>Total Sales Order Amount</label>
    <summarizedField>varcpq__Sales_Order__c.Grand_Total__c</summarizedField>
    <summaryFilterItems>
        <field>varcpq__Sales_Order__c.varcpq__Stage__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>varcpq__Sales_Order__c.varcpq__Client__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>