unpackaged/main/default/objects/Account/fields/Total_SO_Grand_Total_Non_CC__c.field-meta.xml
<CustomField>
    <fullName>Total_SO_Grand_Total_Non_CC__c</fullName>
    <label>Total SO Grand Total (Non CC)</label>
    <summarizedField>varcpq__Sales_Order__c.Grand_Total__c</summarizedField>
    <summaryFilterItems>
        <field>varcpq__Sales_Order__c.Order_Type__c</field>
        <operation>notEqual</operation>
        <value>Credit Card Order</value>
    </summaryFilterItems>
    <summaryForeignKey>varcpq__Sales_Order__c.varcpq__Client__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>