unpackaged/main/default/objects/Account/fields/Varcom_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Varcom_Company_ID__c</fullName>
    <label>Varcom Company ID</label>
    <type>TextArea</type>
</CustomField>