unpackaged/main/default/objects/Account/fields/VarcomActive__c.field-meta.xml
<CustomField>
    <fullName>VarcomActive__c</fullName>
    <description>Was this Account marked Active in Varcommerce</description>
    <inlineHelpText>Was this Account marked Active in Varcommerce</inlineHelpText>
    <label>VarcomActive</label>
    <length>30</length>
    <type>Text</type>
</CustomField>