unpackaged/main/default/objects/Account/fields/Viewer_is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Viewer_is_Owner__c</fullName>
    <formula>OwnerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Viewer is Owner</label>
    <type>Checkbox</type>
</CustomField>