unpackaged/main/default/objects/Account/recordTypes/Canadian_Account.recordType-meta.xml
<RecordType>
    <fullName>Canadian_Account</fullName>
    <active>true</active>
    <label>Canadian Account</label>
</RecordType>