unpackaged/main/default/objects/Account/recordTypes/US_Account.recordType-meta.xml
<RecordType>
    <fullName>US_Account</fullName>
    <active>true</active>
    <label>US Account</label>
</RecordType>