unpackaged/main/default/objects/Account/listViews/My_Account_Teams.listView-meta.xml
<ListView>
    <fullName>My_Account_Teams</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.CURRENCY_ISO_CODE</columns>
    <columns>varcpq__Active__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>Account_Owner_Name__c</columns>
    <filterScope>Team</filterScope>
    <label>My Account Teams</label>
</ListView>