unpackaged/main/default/objects/Account/listViews/Supplier_Diversity_Accounts.listView-meta.xml
<ListView>
    <fullName>Supplier_Diversity_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Account_Total_GP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Supplier_Diversity_Client__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Supplier Diversity Accounts</label>
</ListView>